# pi-neurosymbolic-routing

./: .gitignore  BASELINE_CONFIG.txt  BENCHMARK_REGENERATION.md  DATASET_COMPLIANCE_PROOF.md  README.md  RUN_TAGS.txt  baseline_prompts_tier2.csv  baseline_results.csv  err.txt  find_case_studies.py  grammar_phi2_answer_yesno.gbnf  out.txt  pyproject.toml  requirements.txt  run_baseline_phi2.py  run_baseline_phi2_WORKING.py  run_baseline_phi2_server.py  run_hybrid_v1.py  setup.py  sheet_summary.csv  smoke_test_e8_fix.sh  smoke_test_nogrammar.sh  summarize_results.py  summarize_results_nopandas.py  test_a4_solver.py  test_individual_prompts.py  test_nogrammar.py  test_v3_router.py
archive/: QUICK_EXECUTION_COMMANDS.sh
configs/: run_tier1.yaml  run_tier1_mac.yaml  run_tier1_qwen_math.yaml  run_tier1_smoke.yaml
data/: baseline_prompts_tier2_400.csv  baseline_prompts_tier3_1000.csv  datasets.md  industry_dataset_notes.txt  industry_tier1_40.csv  industry_tier1_40_idmap.csv  industry_tier2_400.csv  industry_tier3_1000.csv
docs/: A1_A2_TEST_PLAN.md  EXECUTION_WORKFLOW.md  MIGRATION.md  V1_BASELINE_MATRIX_PLAN.md  V2_CORRECTED_SPECIFICATION.md
grammars/: grammar_int.gbnf  grammar_int_12d_firstdigit.gbnf  grammar_int_12d_max.gbnf  grammar_int_12d_only.gbnf  grammar_int_12d_strict.gbnf  grammar_int_12d_tight.gbnf  grammar_int_4d.gbnf  grammar_int_6d.gbnf  grammar_int_answer.gbnf  grammar_int_only.gbnf  grammar_int_only_strict.gbnf  grammar_int_tight.gbnf  grammar_int_with_reasoning.gbnf  grammar_num_flex_12d.gbnf  grammar_number.gbnf  grammar_phi2_answer_int.gbnf  (+18 more)
(+198 files in other folders)
